# spatio-temporal-cues

./: .gitignore  README.md
data/bham_cs_1/dump/message_store/: soma.bson  soma.metadata.json  soma_roi.bson  soma_roi.metadata.json  system.indexes.bson
data/bham_cs_1/map/: cs_1f_20140724.yaml
gmm_spatial_model/: CMakeLists.txt  package.xml  setup.py  spatial-cues.rviz
gmm_spatial_model/launch/: spatial-model.launch  temp_launch.launch
gmm_spatial_model/scripts/: multi_var.py  proto.py  qsr_learn_proto.py  robot_testing_interface.py  spatial_model_client.py  spatial_model_node.py
gmm_spatial_model/src/gmm_spatial_model/: models.py  spatial_model_service.py  spatial_relation_graph.py  support_functions.py  transfer.py
gmm_spatial_model/srv/: AddPoseSampleForPredicate.srv  GetPoseForPredicate.srv
prolog_interface/launch/: prolog_interface.launch
scripts/: start_mongo.sh  start_mongo_and_soma.sh
simple_pnp_action_server/: CMakeLists.txt  package.xml
simple_pnp_action_server/launch/: robot_plan.launch
simple_pnp_action_server/plans/: Deliver_@Object_@Target.pnml  simple_plan.pnml
simple_pnp_action_server/src/: MyActions.cpp  MyPNPAS.cpp
simple_speech_interface/: CMakeLists.txt  package.xml
simple_speech_interface/launch/: prolog_interface.launch
simple_speech_interface/pl/: parser.pl  strands.pl
simple_speech_interface/src/: GoogleSpeech.py  GoogleSpeechROSInterface.py  robot_interface.py
soma_dbs/: geospatial.db
