<?xml version="1.0"?>
<package>
  <name>gmm_spatial_model</name>
  <version>0.0.0</version>
  <description>A package to create and update spatial predicate models based on gaussian mixture models.</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/gmm_spatial_model</url> -->


  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>soma_geospatial_store</build_depend>
  <build_depend>nav_goals_generator</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>soma_geospatial_store</run_depend>
  <run_depend>nav_goals_generator</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>