<?xml version="1.0"?>
<package>
  <name>gmm_spatial_model</name>
  <version>0.0.1</version>
  <description>A package to create and update spatial predicate models based on gaussian mixture models.</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>python-sklearn</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>soma_geospatial_store</build_depend>
  <build_depend>soma_roi_manager</build_depend>
  <build_depend>soma_msgs</build_depend>
  <build_depend>nav_goals_generator</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>python-sklearn</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>soma_geospatial_store</run_depend>
  <run_depend>soma_roi_manager</run_depend>
  <run_depend>soma_msgs</run_depend>
  <run_depend>nav_goals_generator</run_depend>
  <run_depend>tf</run_depend>

 </package>